--- a/index.html
+++ b/index.html
@@ -8,33 +8,65 @@
 		@import url('https://fonts.googleapis.com/css2?family=Alex+Brush&family=Neuton:ital,wght@0,200;0,300;0,400;0,700;0,800;1,400&display=swap')
 	</style>
 	
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+	
 	<title>MG Fashion Jewels</title>
-	<link rel="stylesheet" type="text/css" href="style.css" />
-	<script src="script.js"></script>
+	<link rel="stylesheet" type="text/css" href="style.css" />	
 </head>
 	
 <body>
-<header>
-		<a href="index.html"><img src="logo.png" alt="Logo" id="logo"></a>
-    <h1 class="alex-brush-regular">MG Fashion Jewels</h1>
-</header>
-<nav class="neuton-bold">
-    <ul id="categories-list">
-        <li><a href="#" onclick="showAll()">Home</a></li>
-        <li><a href="#" onclick="filterByCategory('necklace sets')">Necklace Sets</a></li>
-        <li><a href="#" onclick="filterByCategory('pendant sets')">Pendant Sets</a></li>
-        <li><a href="#" onclick="filterByCategory('earrings')">Earrings</a></li>
-				<li><a href="#" onclick="filterByCategory('ring')">Rings</a></li>
-				<li><a href="#" onclick="filterByCategory('bracelet')">Bracelets</a></li>
-		</ul>
-</nav>
+	<header>
+		<div>
+			<a href="./"><img src="logo.png" alt="Logo" id="logo"></a>
+		</div>
+		<div>
+			<h1 class="alex-brush-regular">MG Fashion Jewels</h1>
+		</div>
+		<span class="material-symbols-outlined" id="menu-btn"> menu </span>
+		<div class="neuton-regular" id="info-menu">
+				<p><a href="#" onclick="showAll()">Home</a></p>
+				<p><a href="#" onclick="jewelryCare()">Jewelry Care</a></p>
+				<p><a href="contact.html">Contact</a></p>
+		</div>
+	</header>
+
+	<nav class="neuton-bold">
+	    <ul id="categories-list">
+	        <li><a href="#" onclick="filterByCategory('necklace sets')"> Necklace Sets</a> </li>
+	        <li><a href="#" onclick="filterByCategory('pendant sets')"> Pendant Sets</a> </li>
+	        <li><a href="#" onclick="filterByCategory('earrings')"> Earrings</a> </li>
+		<li><a href="#" onclick="filterByCategory('ring')">Rings</a></li>
+		<li><a href="#" onclick="filterByCategory('bracelet')">Bracelets</a></li>
+	    </ul>
+	</nav>
 
 
-<div class="catalog-container" id="catalog-container">
-    <!-- Catalog items added here dynamically -->
-</div>
+	<div class="catalog-container" id="catalog-container">
+	    <!-- Catalog items added here dynamically -->
+	</div>
+	
+
+	<script src="script.js"></script>
+
 	<script>
-
+		//display Jewlery care
+		function jewelryCare() {
+			const container = document.getElementById('catalog-container');
+			container.innerHTML = '';
+			const catalogItem = document.createElement('div');
+			catalogItem.innerHTML = `
+					<h1 class="neuton-bold">Jewelry Care</h1>
+					<ul class="neuton-regular">
+						<li>Store your jewelry dry and clean.</li>
+						<li>Use a soft dry cloth to clean your jewelry.</li>
+						<li>Keep away from skincare, water, perfume and hairspray.</li>
+						<li>Please ensure the piece is to your liking before purchasing it as there are <b>no returns and no refunds</b>.</li>
+					</ul>
+					<h3 class="neuton-regular">Jewelry life depends on your extensive care :) </h3>
+					`;
+			container.appendChild(catalogItem);
+		}
+		
 		function displayCatalog(data) {
 			const catalogContainer = document.getElementById('catalog-container');
 			catalogContainer.innerHTML = '';
@@ -45,19 +77,22 @@
 							<img src="${item.imageUrl}" alt="${item.name}">
 							<h3 class="neuton-regular">${item.name}</h3>`;
 					catalogContainer.appendChild(catalogItem);
-			}); 
-		}
-		function showAll() {
-			displayCatalog(catalogData);
+			});
 		}
 
+		
 		function filterByCategory(category) {
 			const filteredData = catalogData.filter(item => item.category === category);
 			displayCatalog(filteredData);
 		}
-		
+
+		function showAll() {
+			displayCatalog(catalogData);
+		}
+
 		// Initial display
 		showAll(); 
+			
 	</script>
 </body>
 	
