--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				
 				<h2 class="neuton-bold">Facebook Pages</h2>
 				<ul class="neuton-regular">
-					<li><a href="https://www.facebook.com/Page1" target="_blank">Facebook Page 1</a></li>
+					<li><a href="https://www.facebook.com/profile.php?id=61556808190840" target="_blank">Facebook Page 1</a></li>
 					<li><a href="https://www.facebook.com/Page2" target="_blank">Facebook Page 2</a></li>
 				</ul>
 				<h3 class="neuton-regular">
