--- a/index.html
+++ b/index.html
@@ -76,15 +76,11 @@
 
 				<h2 class="neuton-regular"><b>Phone:</b> +1-647-627-6545</h2>
 				<h2 class="neuton-regular"><b>Email:</b> mgfashionjewels@gmail.com </h2>
+				<h2 class="neuton-regular"><b>Facebook page:</b> <a href="https://www.facebook.com/profile.php?id=61556808190840" target="_blank"> Visit Page here </a> </h2>
+				<h2 class="neuton-regular"><b>Headquaters:</b> Brampton, Ontario, Canada</h2>
 				<br>
-				
-				<h2 class="neuton-bold">Facebook Pages</h2>
-				<ul class="neuton-regular">
-					<li><a href="https://www.facebook.com/profile.php?id=61556808190840" target="_blank">Facebook Page 1</a></li>
-					<li><a href="https://www.facebook.com/Page2" target="_blank">Facebook Page 2</a></li>
-				</ul>
 				<h3 class="neuton-regular">
-					Feel free to contact us anywhere to place an order! 
+					Feel free to contact us anywhere for queries and to place an order! 
 				</h3>
 				`;
 			container.appendChild(catalogItem);
