Added google analytics

--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
 	<title>MG Fashion Jewels</title>
 	<link rel="stylesheet" type="text/css" href="style.css" />	
 </head>
-	
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CXR4LD7EKC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CXR4LD7EKC');
+</script>
 <body>
 	<header>
 		<div>
