--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
 			const catalogItem = document.createElement('div');
 			catalogItem.innerHTML = `
 				<h1 class="neuton-bold">Contact Info</h1>
-
-				<h2 class="neuton-regular"><b>Phone:</b> +1-647-627-6545</h2>
+				<h2 class="neuton-regular"><b>Phone:</b> +1 647-627-6545</h2>
 				<h2 class="neuton-regular"><b>Email:</b> mgfashionjewels@gmail.com </h2>
-				<h2 class="neuton-regular"><b>Facebook page:</b> <a href="https://www.facebook.com/profile.php?id=61556808190840" target="_blank"> Visit Page here </a> </h2>
+				<h2 class="neuton-regular"><b>Facebook page:</b> <a href="https://www.facebook.com/profile.php?id=61556808190840" target="_blank"> Visit Page</a> </h2>
+				<h2 class="neuton-regular"><b>Instagram page:</b> <a href="https://www.instagram.com/mgfashionjewels/" target="_blank"> Visit Page</a> </h2>
 				<h2 class="neuton-regular"><b>Headquaters:</b> Brampton, Ontario, Canada</h2>
 				<br>
 				<h3 class="neuton-regular">
