added combo sets

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
 	<nav class="neuton-bold">
 	    <ul id="categories-list">
+		<li><a href="#" onclick="filterByCategory('combo')">Combo Sets</a></li>
 	        <li><a href="#" onclick="filterByCategory('necklace sets')"> Necklace Sets</a> </li>
 	        <li><a href="#" onclick="filterByCategory('pendant sets')"> Pendant Sets</a> </li>
 	        <li><a href="#" onclick="filterByCategory('earrings')"> Earrings</a> </li>
