--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	
 	<title>MG Fashion Jewels</title>
 	<link rel="stylesheet" type="text/css" href="style.css" />	
+	<script src="script.js"></script>
 </head>
 <!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-CXR4LD7EKC"></script>
@@ -44,7 +45,7 @@
 
 	<nav class="neuton-bold">
 	    <ul id="categories-list">
-		<li><a href="#" onclick="filterByCategory('combo')">Combo Sets</a></li>
+				<li><a href="#" onclick="filterByCategory('combo')">Combo Sets</a></li>
 	        <li><a href="#" onclick="filterByCategory('necklace sets')"> Necklace Sets</a> </li>
 	        <li><a href="#" onclick="filterByCategory('pendant sets')"> Pendant Sets</a> </li>
 	        <li><a href="#" onclick="filterByCategory('earrings')"> Earrings</a> </li>
@@ -59,66 +60,18 @@
 	</div>
 	
 
-	<script src="script.js"></script>
 
 	<script>
 
 		//display Jewlery care
-		function shippingInfo() {
-			const container = document.getElementById('catalog-container');
-			container.innerHTML = '';
-			const catalogItem = document.createElement('div');
-			catalogItem.innerHTML = `
-					<h1 class="neuton-bold">Shipping Info</h1>
-					<div class="neuton-regular">
-						<p class="neuton-bold">Payment must be made before shipment</p> 
-						<p>Pick up available in Brampton and Downtown Toronto free of charge</p>
-						<p>Shipping available within Canada with additional charges</p>
-						<p>Charges vary from $5 to $10 based on the weight and location</p>
-						<p>Must make an opening video of the parcel you recieve to claim any refunds or returns on defective pieces of jewelry</p>
-					</div>
-					<h3 class="neuton-bold">**Policy: No returns nor refunds**</h3>
-					`;
-			container.appendChild(catalogItem);
-		}
-
-		//display Jewlery care
-		function jewelryCare() {
-			const container = document.getElementById('catalog-container');
-			container.innerHTML = '';
-			const catalogItem = document.createElement('div');
-			catalogItem.innerHTML = `
-					<h1 class="neuton-bold">Jewelry Care</h1>
-					<ul class="neuton-regular">
-						<li>Store your jewelry dry and clean.</li>
-						<li>Use a soft dry cloth to clean your jewelry.</li>
-						<li>Keep away from skincare, water, perfume and hairspray.</li>
-						<li>Please ensure the piece is to your liking before purchasing it as we offer <b>no returns and no refunds</b>.</li>
-					</ul>
-					<h3 class="neuton-regular">Jewelry life depends on your extensive care :) </h3>
-					`;
-			container.appendChild(catalogItem);
-		}
-
-		function contactInfo() {
-			const container = document.getElementById('catalog-container');
-			container.innerHTML = '';
-			const catalogItem = document.createElement('div');
-			catalogItem.innerHTML = `
-				<h1 class="neuton-bold">Contact Info</h1>
-				<h2 class="neuton-regular"><b>Phone:</b> +1 647-627-6545</h2>
-				<h2 class="neuton-regular"><b>Email:</b> mgfashionjewels@gmail.com </h2>
-				<h2 class="neuton-regular"><b>Facebook page:</b> <a href="https://www.facebook.com/profile.php?id=61556808190840" target="_blank"> Visit Page</a> </h2>
-				<h2 class="neuton-regular"><b>Instagram page:</b> <a href="https://www.instagram.com/mgfashionjewels/" target="_blank"> Visit Page</a> </h2>
-				<h2 class="neuton-regular"><b>Headquaters:</b> Brampton, Ontario, Canada</h2>
-				<br>
-				<h3 class="neuton-regular">
-					Feel free to contact us anywhere for queries and to place an order! 
-				</h3>
-				`;
-			container.appendChild(catalogItem);
-		}
+		jewelryCare() 
 		
+		//display shipping care
+		shippingInfo()
+
+		//display contact info
+		contactInfo()
+
 		function displayCatalog(data) {
 			const catalogContainer = document.getElementById('catalog-container');
 			catalogContainer.innerHTML = '';
@@ -145,6 +98,8 @@
 
 		// Initial display
 		showAll(); 
+
+		
 			
 	</script>
 </body>
