--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
 	<header>
 		<div>
-			<a href="./"><img src="logo.png" alt="Logo" id="logo"></a>
+			<a href="./"><img src="mg_logo.png" alt="Logo" id="logo"></a>
 		</div>
 		<div>
 			<h1 class="alex-brush-regular">MG Fashion Jewels</h1>
