--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<a href="./"><img src="mg_logo.png" alt="Logo" id="logo"></a>
 		</div>
 		<div>
-			<h1 class="alex-brush-regular">MG Fashion Jewels</h1>
+			<h1 class="montecarlo-regular">MG Fashion Jewels</h1>
 		</div>
 		<div class="dropdown">
 			<span class="material-symbols-outlined menu-btn" id="menu-btn"> menu </span>
