--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+	<title>MG Fashion Jewels</title>
+	
 	<style>
-		@import url('https://fonts.googleapis.com/css2?family=Alex+Brush&family=Neuton:ital,wght@0,200;0,300;0,400;0,700;0,800;1,400&display=swap')
+	@import url('https://fonts.googleapis.com/css2?family=MonteCarlo&family=Neuton:ital,wght@0,200;0,300;0,400;0,700;0,800;1,400&display=swap');
 	</style>
 	
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-	
-	<title>MG Fashion Jewels</title>
 	<link rel="stylesheet" type="text/css" href="style.css" />	
+	
 	<script src="script.js"></script>
 </head>
 <!-- Google tag (gtag.js) -->
